fix(app.less): main::overflow hidden

--- a/src/app.less
+++ b/src/app.less
@@ -95,6 +95,7 @@ body {
 
 .main {
   margin-top: @lineH-PC;
+  overflow: hidden;
   &-bg {
     background: url(/static/image/bg-pc.webp);
     width: 100%;
